<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/login_back">

    <RelativeLayout
        android:background="@color/login_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/register_back"
            android:src="@mipmap/btn_back"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="26px"
            android:text="@string/register"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/register_mobile"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:text="@string/Mobile_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_toRightOf="@id/register_mobile"
            android:layout_margin="10dp"
            android:id="@+id/edit_mobile"
            android:maxLength="13"
            android:inputType="number"
            android:hint="输入手机号码"
            android:textColorHint="@color/login_bt_back1"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/delete_edit3"
            android:visibility="invisible"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:src="@mipmap/bg_my_order_search_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/checkBo"
            android:checked="true"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/clause_text"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/clause_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/register_next"
        android:layout_margin="10dp"
        android:text="@string/next"
        android:background="@drawable/button_round"
        android:textColor="@color/login_bt_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
