<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_back"
    android:orientation="vertical"
    tools:context="com.hhzmy.activity.LoginActivity">

    <RelativeLayout
        android:background="@color/login_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/login_back"
            android:src="@mipmap/btn_back"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="26px"
            android:text="@string/login"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/account"
                android:layout_margin="10dp"
                android:text="@string/account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_toRightOf="@id/account"
                android:id="@+id/edit_account"
                android:maxLength="13"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:textColorHint="@color/login_bt_back1"
                android:hint="手机号/邮箱/用户名/门店会员卡"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/delete_edit1"
                android:layout_marginTop="10dp"
                android:layout_marginRight="80dp"
                android:layout_alignParentRight="true"
                android:visibility="invisible"
                android:src="@mipmap/bg_my_order_search_cancle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/password"
                android:layout_margin="10dp"
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_toRightOf="@id/password"
                android:id="@+id/edit_password"
                android:layout_margin="10dp"
                android:inputType="textPassword"
                android:background="@color/white"
                android:textColorHint="@color/login_bt_back1"
                android:hint="请输入6-20位易购密码"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/delete_edit2"
                android:visibility="invisible"
                android:layout_alignParentRight="true"
                android:layout_marginRight="80dp"
                android:layout_marginTop="10dp"
                android:src="@mipmap/bg_my_order_search_cancle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/display_pass"
                android:src="@mipmap/icon_display"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp" />

            <ImageView
                android:id="@+id/hidden_pass"
                android:src="@mipmap/icon_hidden"
                android:layout_width="wrap_content"
                android:visibility="visible"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp" />

        </RelativeLayout>
    </LinearLayout>

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/login_btn"
        android:text="登录"
        android:textColor="@color/login_bt_text1"
        android:background="@drawable/button_round"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/forget_pass"
        android:layout_gravity="right"
        android:text="@string/forgetpass"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/register_bt"
        android:background="@mipmap/btn_register_normal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/other_login"
        android:layout_marginTop="300dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/vip_login"
        android:src="@mipmap/icon_store_membership_card"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/vip_login"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
